--- a/vignettes/h_curve.Rmd
+++ b/vignettes/h_curve.Rmd
@@ -25,6 +25,8 @@ library(grid)
 library(sfcurve)
 ```
 
+## Construction and expansion
+
 H-curve has the following two base units: an H-shape unit $H_1$ and its rotated version $H_2$:
 
 ```{r, fig.width = 5, fig.height = 3}
@@ -100,6 +102,8 @@ More generally, we can generalize the previous equation to any step of the itera
 
 $$ H^{(k)} = H_1^{(k-1)} \cdot c \cdot H_2^{(k-1)} \cdot c \cdot H_3^{(k-1)} \cdot c \cdot H_4^{(k-1)} \cdot c, \quad k \ge 1$$
 
+## Number of different forms
+
 After the first iteration, the total number of forms of the H-curve denoted as $n_1$ is 
 
 $$ n_1 = n_0^4 \cdot 2 $$
@@ -123,6 +127,8 @@ $$
 n_k = 2^{\cfrac{4^{k+1}-1}{3}} 
 $$
 
+## More general forms
+
 More generally, $H_1$ and $H_2$ can be thought as building on an even smaller unit $H_0$:
 
 $$
@@ -132,7 +138,7 @@ H_2 &= H_0 \cdot v \cdot H_0 \cdot v \cdot H_0 \cdot v \cdot H_0 \cdot v \\
 \end{align*}
 $$
 
-```{r, fig.width = 9, fig.height = 3}
+```{r, fig.width = 5/2*3, fig.height = 3}
 draw_multiple_curves(
     H0, 
     expand_h(H0, connect = "h"),
@@ -153,6 +159,8 @@ fun = function(h, k) {
 }
 fun(H0, 5) |> plot_segments(closed = TRUE)
 ```
+
+## Global structure is unchanged
 
 Last, although H-curve has a large number of different forms, different settings only affect foldings locally in the curve,
 while its global structure is still unchanged:
